<resources>
    <string name="app_name">Slam Book</string>
    <string name= "what_is_your_nickname"> Whats yur nickname?</string>
    <string name= "done"> DONE </string>
    <string name="NameHeader">Name</string>
    <string name="what_is_your_name">What is your name</string>
    <string name="NicknameHeader">Nickname</string>
    <string name="AgeHeader">Age</string>
    <string name="what_is_your_age">What is your age</string>
    <string name="BirthdayHeader">Birthday</string>
    <string name="what_is_your_birthday">What is your Birthday</string>
    <string name="PhoneNumberHeader">Phone Number</string>
    <string name="what_is_your_number">What is your Number</string>
    <string name="EmailHeader">Email Address</string>
    <string name="what_is_your_email">What is your email</string>
    <string name="CourseHeader">Course</string>
    <string name="what_is_your_course">What is your course</string>
    <string name="DreamHeader">Ultimate Dream</string>
    <string name="what_is_your_dream">What is your dream</string>
    <string name="CrushHeader">Sino kras mo</string>
    <string name="who_is_your_crush">Ayiieeee!</string>
    <string name="MessageHeader">Message</string>
    <string name="what_is_your_message">Whatcha\'wannasay</string>


</resources>
