<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myUser"
            type="com.example.aboutme.MyName" />
    </data>

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/layout_padding"
        android:paddingTop="@dimen/small_padding"
        android:paddingEnd="@dimen/layout_padding"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/NameHeader"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/NameHeader" />
        <EditText
            android:id="@+id/name_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/NicknameHeader"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/NicknameHeader" />
        <EditText
            android:id="@+id/nickname_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_nickname"
            android:inputType="textPersonName"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/AgeHeader"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/AgeHeader" />
        <EditText
            android:id="@+id/age_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_age"
            android:inputType="textPersonName"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/BirthdayHeader"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/BirthdayHeader" />

        <EditText
            android:id="@+id/birthday_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_birthday"
            android:inputType="date"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/PhoneNumberHeader"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/PhoneNumberHeader" />

        <EditText
            android:id="@+id/phone_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_number"
            android:inputType="phone"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/EmailHeader"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/EmailHeader" />

        <EditText
            android:id="@+id/email_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_email"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/CourseHeader"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/CourseHeader" />

        <EditText
            android:id="@+id/course_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_course"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/DreamHeader"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/DreamHeader" />

        <EditText
            android:id="@+id/dream_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_dream"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/CrushHeader"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/CrushHeader" />

        <EditText
            android:id="@+id/crush_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/who_is_your_crush"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/MessageHeader"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/MessageHeader" />

        <EditText
            android:id="@+id/message_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_message"
            android:inputType="textMultiLine"
            android:textAlignment="center" />





        //these are the elements to be shown
        <TextView
                android:id="@+id/name_text_shown"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myUser.name}"
                android:textAlignment="center"
                android:visibility="gone" />         //NAME
        <TextView
            android:id="@+id/nickname_text_shown"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingBottom="@dimen/small_padding"
            android:text="@={myUser.nickname}"
            android:textAlignment="center"
            android:visibility="gone" />            //NICKNAME
        <TextView
            android:id="@+id/age_text_shown"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingBottom="@dimen/small_padding"
            android:text="@={myUser.age}"
            android:textAlignment="center"
            android:visibility="gone" />            //AGE
        <TextView
            android:id="@+id/thankyou_text_shown"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingBottom="@dimen/small_padding"
            android:text="@={myUser.thankyou}"
            android:textAlignment="center"
            android:visibility="gone" />


            <Button
                android:id="@+id/done_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/roboto"
                android:text="@string/done" />



    </LinearLayout>
    </ScrollView>

</layout>
